<resources>
  <string name="app_name">Anuncios</string>
  <string name="stop_load">Detiene la carga</string>
  <string name="mnu_web_nextpg">Próxima página</string>
  <string name="load_info">Información de carga</string>
  <string name="nav_info">Historia de Navegación</string>
  <string name="StopLoad">Detiene la carga</string>
  <string name="url_open_out">Abre en otra App</string>
  <string name="OpenUrl">Abrir página …</string>
  <string name="btnAceptar">Aceptar</string>
  <string name="btnClose">Cerrar</string>
  <string name="lbNewUrl">URL:</string>
  <string name="title_sel_anuncio">Selección del Anuncio</string>
  <string name="publicar">Publicar anucio</string>
  <string name="btnNextTxt">Proximo</string>
  <string name="btnPrevTxt">Anterior</string>
  <string name="btnEditTxt">Editar</string>
  <string name="btnPublicar">Publicar</string>
  <string name="OverFirstAnunc">Vuelva a tocar para pasar al último anuncio</string>
  <string name="OverLastAnunc">Vuelva a tocar para pasar al primer anuncio</string>
  <string name="mnuLoadAnuncFile">Cargar fichero de anuncios</string>
  <string name="navPrevio">Previo</string>
  <string name="navPublicar">Publicar</string>
  <string name="navEditar">Editar</string>
  <string name="navNext">Proximo</string>
  <string name="title_activity_edit_data">Edicción de los datos</string>
  <string name="action_settings">Settings</string>
  <string name="EditData">Edicción de los datos</string>
  <string name="lbIdAnunc">Identificador del Anuncio:</string>
  <string name="lbTitle">Titulo</string>
  <string name="lbTagName">Nombre del tag</string>
  <string name="lbAttrName">Nombre del atibuto</string>
  <string name="lbValueName">Valor del atributo</string>
  <string name="lbAnuncio">Anuncio</string>
  <string name="lbMail">Correo</string>
  <string name="lbTelef">Telefono</string>
  <string name="lbPrecio">Precio</string>
  <string name="lbUrls">URLs para acceder al auncio</string>
  <string name="lbInsertar">Insertar:</string>
  <string name="lbModificar">Modificar:</string>
  <string name="lbBorrar">Borrar:</string>
  <string name="lbKeyList1">Listas de palabras claves 1</string>
  <string name="lbKeyName">Nombre de la lista:</string>
  <string name="lbKeyWords">Lista de Palabras:</string>
  <string name="lbKeyList2">Listas de palabras claves 2</string>
  <string name="mnuSaveChanges">Guardar los cambios</string>
  <string name="mnuInsertMark">Insertar expresión</string>
  <string name="mnuRestoreSource">Restaura valor inicial</string>
  <string name="mnuShowUrls">Mostar URLs</string>
  <string name="mnuShowTags">Mostar información HTML</string>
  <string name="mnuSetDefaultTag">Poner Valores por defecto</string>
  <string name="msgSetRestoreData">Toque el dato que desea restaurar y luego esta opción</string>
  <string name="mnuRestoreAll">Restaurar todos los Anuncios</string>
  <string name="mnuDelAnuncio">Borrar anuncio actual</string>
  <string name="mnuNewAnuncio">Crear anuncio nuevo</string>
  <string name="mnuNewAnuncFile">Crea nuevo fichero de Anuncios</string>
  <string name="msjErrorTitle">El título del anuncio excede los 120 caracteres</string>
  <string name="msgErrorMail">El formato del correo es incorecto</string>
  <string name="msgErrorUrl">El valor no se corresponde con el formato de una URL</string>
  <string name="noAnuncFiles">No hay ficheros de anuncios disponible</string>
  <string name="SelAnuncFile">Seleccione el fichero de anuncio</string>
  <string name="AnuncFileListError">Error al obtener los ficheros de anuncios</string>
  <string name="btnBorrar">Borrar</string>
  <string name="dlgDelAnuncio">Borrar un anuncio|Esta seguro que quieres borrar el anuncio actual</string>
  <string name="dlgRestAnunc">Restaurar fichero de anuncios|Si restaura el fichero de anuncios se perderan todos los cambios realizados en todos los anuncios del fichero</string>
  <string name="msgFileNoRestore">El fichero no pudo ser restaurado</string>
  <string name="editCloseTilte">Cierre del modo edicción</string>
  <string name="editCloseMsg">Lo datos modificados pueden perderse, que desea hacer:</string>
  <string name="btnGuardar">Guardar</string>
  <string name="btnCancel">Cancelar</string>
  <string name="bntDescartar">Descartar</string>
  <string name="lbAnuncFileName">Nombre del fichero de anuncios</string>
  <string name="txtNewName">Nombre:</string>
  <string name="NewAnuncFileErrTitle">Fichero de Anuncio Nuevo</string>
  <string name="NewAnuncFileErrMsg">Se produjo un error al tratar de crea el fichero de anuncios nuevo, modifique el nombre y prueba otra vez.</string>
  <string name="msgNoAnunc">Anuncio Actual|No hay ningún anucio seleccionado para Editar o Publicar</string>
  <string name="msgInsertErr">Hubo un error el insertar el anuncio nuevo</string>
  <string name="mnuDelAnuncFile">Borrar fichero de Anuncios</string>
  <string name="dlgDelAnuncFile">Fichero de Anuncios|Esta seguro que desea borrar el fichero de anuncios actual</string>
  <string name="msgFileNoDelete">Hubo un error en el borrado del fichero de anuncios actual</string>
  <string name="msgNoReqDotos">El ununcio no se puede publicar, porque carece de datos requerido como Título, Correo o URL</string>
  <string name="msgErrorMailVacio">El correo electronico es requerido</string>
  <string name="msgErrorUrlVacio">La URL para insertar la pagina es requerida</string>
  <string name="msjErrorTitleVacio">El título del anuncio es requerido</string>
  <string name="mnu_web_prevpg">Ir a la página anterior</string>
  <string name="mnu_web_reload">Recargar la página</string>
  <string name="mnu_web_getdatos1">Obtine datos via Scripts</string>
  <string name="mnu_web_getdatos2">Obtiene datos via URL</string>
  <string name="TitleInsertado">Anuncio Insertado</string>
  <string name="TitleInsertando">Insertando Anuncio</string>
  <string name="msgSaveUrls">Enlaces de Anuncio Publicado|No se han guardado los datos de publicación del anuncio, ¿Que desde hacer?</string>
  <string name="msgBadUrl">La Url de la página no contiene la información necesaria\\n</string>
  <string name="mnu_web_modify">Modificar el Anuncio</string>
  <string name="mnu_web_delete">Borrar el anuncio</string>
  <string name="mnu_web_view">Ver el anuncio publicado</string>
  <string name="InsertAnunc">Insertando anuncio</string>
  <string name="InsertedAnunc">Anuncio Insertado</string>
  <string name="ModifyAnunc">Modificando Anuncio</string>
  <string name="DeleteAnunc">Borrando Anuncio</string>
  <string name="ViewAnunc">Mostrando Anuncio</string>
  <string name="ViewPage">Mostrando Pagina Web</string>
  <string name="lbMostrar">Mostrar:</string>
  <string name="ShowInCrome">Mostrar en el navegador Crome</string>
  <string name="ShowInFireFox">Mostrar en el navegador Firefox</string>
  <string name="ShowInOpera">Mostrar en el navegador Opera</string>
  <string name="ShowInOperaMini">Mostrar en el navegador Opera Mini</string>
  <string name="ShowInAndroid">Mostrar en el navegador de Android</string>
  <string name="ShowInDefault">Muestrar en el navegador por defecto</string>
  <string name="CopyUrl">Copia URL al Portapapeles</string>

</resources>
